package LinhaProducao.domain.Maquina;

public enum EstadoMaquina {
	ATIVO, SUSPENSO, INDISPONIVEL;
}
