@startuml

title __SISTEMAMONITORIZACAOMAQUINAS's Class Diagram__\n

  namespace  {
    namespace inhaProducao.domain {
      class ChaoDeFabrica.domain.ChaoDeFabrica {
      }
    }
  }
  

  namespace  {
    namespace inhaProducao.domain {
      namespace Maquina {
        class ChaoDeFabrica.domain.ChaoDeFabrica {
        }
      }
    }
  }
  

  namespace  {
    namespace inhaProducao.domain {
      namespace Maquina {
        enum EstadoMaquina {
        }
      }
    }
  }
  

  namespace  {
    namespace inhaProducao.domain {
      namespace Maquina {
        class ChaoDeFabrica.domain.Maquina.IdMaquina {
        }
      }
    }
  }
  

  namespace  {
    namespace inhaProducao.domain {
      namespace Maquina {
        class ChaoDeFabrica.domain.Maquina.Maquina {
        }
      }
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace ensagens.application.broadcast {
      class Mensagens.application.broadcast.BroadcastHelloService {
      }
    }
  }
  

  namespace  {
    namespace ensagens.application.broadcast {
      class Mensagens.application.ReceiveAcknowledgmentService {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      class Mensagens.domain.BroadcastAcknowledge {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      enum Codigos {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      class Mensagens.domain.DataLength {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      class Mensagens.domain.HelloBroadcast {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      class Mensagens.domain.MensagemUDP {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      class Mensagens.domain.MessageData {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      class Mensagens.domain.RawData {
      }
    }
  }
  

  namespace  {
    namespace ensagens.domain {
      class Mensagens.domain.Version {
      }
    }
  }
  

  ChaoDeFabrica.domain.Maquina.Maquina o-- ChaoDeFabrica.domain.Maquina.EstadoMaquina : estado
  ChaoDeFabrica.domain.Maquina.Maquina o-- ChaoDeFabrica.domain.Maquina.IdMaquina : id
  Mensagens.application.broadcast.BroadcastHelloService .up.|> java.lang.Runnable
  Mensagens.application.ReceiveAcknowledgmentService .up.|> java.lang.Runnable
  Mensagens.application.ReceiveAcknowledgmentService o-- Mensagens.domain.BroadcastAcknowledge : mensagem
  Mensagens.domain.BroadcastAcknowledge -up-|> Mensagens.domain.MensagemUDP
  Mensagens.domain.HelloBroadcast -up-|> Mensagens.domain.MensagemUDP
  Mensagens.domain.MessageData o-- Mensagens.domain.DataLength : length
  Mensagens.domain.MessageData o-- Mensagens.domain.RawData : rawData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
